--- a/onda-consciente/index.html
+++ b/onda-consciente/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="#" />
+    <link rel="icon" type="image/svg+xml" href="./public/svgs/LogoAzul.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Onda Cosciente</title>
     <script src="https://player.vimeo.com/api/player.js"></script>
